Tue Aug 15 16:17:56 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * ace/Hash_MultiMap_Manager_T.h
          Made some minor changes to the documentation to use @a to refer to
          argument names.

Tue Aug 15 15:00:00 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * ace/Event_Handler.cpp:

          Updated Event_Handler_var to use an ACE_Errno_Guard to
          prevent overwriting the errno.

        * bin/tao_orb_tests.lst

          Added new test: TAO/tests/Oneway_Timeouts/run_test.pl

Tue Aug 15 14:22:53 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * ace/Hash_MultiMap_Manager_T.h
          Address the "unsupported xml/html tag" warnings in doxygen build.

Tue Aug 15 08:36:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * bin/MakeProjectCreator/config/acedefaults.mpb

        Backout all of the recent MFC changes.

        * bin/MakeProjectCreator/config/ace_opt_mfc.mpb:

        DELETED.

Mon Aug 14 23:34:11 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/TP_Reactor.cpp
        * ace/TP_Reactor.h

          Removed all register_handler member functions from these files.
          This essentially enables the ability to register signal handlers in
          the TP Reactor by implicitly delegating to the select reactor base class.

          Other register_handler methods (not relating to signal handling)
          were explicit delegations to the select reactor base class, present
          only to silence virtual function hiding warnings created by disabling the
          signal related methods.

Mon Aug 14 16:14:56 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>

        * test/Hash_Multi_Map_Manager_Test.cpp
          Address the "no matching function for call" errors.

        * ace/Hash_MultiMap_Manager_T.h
          Address the "unsupported xml/html tag" warnings in doxygen build.

Mon Aug 14 16:00:00 UTC 2006  Simon Massey  <sma@prismtech.com>
